# tune

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
.omo/plans/: tune-improvement-plan.md
.omo/run-continuation/: ses_15396ab34ffeMwlM06AqKsxsV2.json
src/: api.rs  dispatch.rs  download.rs  i18n.rs  local.rs  log.rs  lyrics.rs  lyrics_online.rs  main.rs  message.rs  navidrome.rs  playback.rs  player.rs  store.rs  ui.rs
src/server/: file_transfer.rs  local.rs  mod.rs  navidrome.rs
src/ui/: input.rs  mod.rs  render.rs
tests/test_data/: albumlist.json
