[package]
name = "tune"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rodio = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = { version = "0.28", features = ["crossterm"] }
crossterm = "0.28"
chrono = "0.4"
anyhow = "1"
async-trait = "0.1"
rand = "0.9"
lofty = "0.22"
