[package]
name = "tune"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rodio = { version = "0.22", features = ["symphonia-flac"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = { version = "0.28", features = ["crossterm"] }
crossterm = "0.28"
chrono = "0.4"
anyhow = "1"
async-trait = "0.1"
rand = "0.9"
lofty = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

